# ChangeLog for net-www/mod_ssl
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/mod_ssl/Attic/ChangeLog,v 1.13 2003/03/11 09:54:37 lordvan Exp $

*mod_ssl-2.8.12-r1 (21 Feb 2003)
  
  11 Mar 2003; Thomas Raschbacher <lordvan@gentoo.org> mod_ssl-2.8.12-r1.ebuild:
  configure says it needs apache 1.3.27 (only) -> changed dep
	
  21 Feb 2003; Martin Holzer <mholzer@gentoo.org> mod_ssl-2.8.12-r1.ebuild :
  Bumped Revision cause of openssl
 
*mod_ssl-2.8.12 (26 Oct 2002)

  26 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> :
  Security update.

*mod_ssl-2.8.11.ebuild (14 July 2002)

  10 Oct 2002; Mike Frysinger <vapier@gentoo.org> mod_ssl-2.8.11.ebuild :
  Version bump #8978

*mod_ssl-2.8.8-r1.ebuild (14 July 2002)

  14 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> mod_ssl-2.8.8-r1.ebuild :
  Added KEYWORDS.

*mod_ssl-2.8.10 (24 Jun 2002)

  14 Aug 2002; Pieter Van den Abeele <pvdabeel@gentoo.org> :
  Added ppc keyword

  14 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> mod_ssl-2.8.10.ebuild :
  Added KEYWORDS.

  24 Jun 2002; Nicholas Jones <carpaski@gentoo.org> mod_ssl-2.8.10.ebuild

  o Version bump. Overflow fix.

*mod_ssl-2.8.9-r1 (21 Jun 2002)

  14 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> mod_ssl-2.8.9.ebuild :
  Added KEYWORDS.

  14 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> mod_ssl-2.8.9-r1.ebuild :
  Added KEYWORDS.

  21 Jun 2002; Nicholas Jones <carpaski@gentoo.org> mod_ssl-2.8.9-r1.ebuild

  o Changed depend line to allow for revisions of apache without
    new ebuilds for mod_ssl.

*mod_ssl-2.8.9 (20 Jun 2002)

  20 Jun 2002; Thilo Bangert <bangert@gentoo.org> mod_ssl-2.8.9.ebuild
  
  version bump - for apache 1.3.26

*mod_ssl-2.8.8 (9 Apr 2002)

  9 Apr 2002; Donny Davies <woodchip@gentoo.org> :

  New package to go along with the rewritten apache ebuild.