@@ -1,6 +1,11 @@
 # ChangeLog for net-www/mod_ssl
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/mod_ssl/Attic/ChangeLog,v 1.13 2003/03/11 09:54:37 lordvan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_ssl/Attic/ChangeLog,v 1.14 2003/03/25 08:42:51 aliz Exp $
+
+*mod_ssl-2.8.14 (25 Mar 2003)
+
+  25 Mar 2003; Daniel Ahlberg <aliz@gentoo.org> mod_ssl-2.8.14.ebuild :
+  Security update.
 
 *mod_ssl-2.8.12-r1 (21 Feb 2003)
   
